<resources>
    <string name="name_id">Name: </string>
    <string name="diameterMax">Diameter max.: </string>
    <string name="diameterMin">Diameter min.: </string>
    <string name="speed">Speed: </string>
    <string name="distance">Distance: </string>
    <string name="description">Description: </string>
    <string name="approach_date">Approach date: </string>
    <string name="details">Details</string>
    <string name="meters">meters</string>

    <string name="pick_date">Pick date</string>
    <string name="random_photo_asteroid">Random Photo of Asteroid</string>

    <string name="marker_favorite_asteroid">Market favorite asteroid</string>
    <string name="marker_dangerous_asteroid">Market dangerous asteroid</string>

    <string name="asteroid_list">Asteroid list</string>
    <string name="asteroid_detail">Asteroid detail</string>
    <string name="to_asteroid_detail">To asteroid detail</string>

    <!-- Bottom-->
    <string name="asteroid_all">All asteroids</string>
    <string name="asteroid_dangerous">Dangerous</string>
    <string name="asteroid_favorites">Favorites</string>
    <string name="error">Error</string>
    <string name="list_empty">List empty</string>
    <string name="cancel">Cancel</string>
    <string name="find">Find</string>
    <string name="scan">Scan</string>
    <string name="asteroid_locator">Asteroid Locator</string>

</resources>