<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/height_toolbar">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/gradient_shadow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        android:layout_margin="@dimen/cards_padding"
        android:background="#f3ecfe"
        android:clipToPadding="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/vertical_padding">

            <ImageView
                android:id="@+id/AsteroidImageView"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:contentDescription="@string/random_photo_asteroid"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_dashboard_black_24dp" />

            <ImageView
                android:id="@+id/asteroidFavoriteImageView"
                android:layout_width="@dimen/small_image_size"
                android:layout_height="@dimen/small_image_size"
                android:layout_margin="@dimen/horizontal_margin"
                android:clickable="true"
                android:contentDescription="@string/marker_favorite_asteroid"
                android:focusable="true"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_baseline_star_24" />

            <ImageView
                android:id="@+id/asteroidDangerousImageView"
                android:layout_width="@dimen/small_image_size"
                android:layout_height="@dimen/small_image_size"
                android:layout_margin="@dimen/horizontal_margin"
                android:contentDescription="@string/marker_dangerous_asteroid"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/asteroidFavoriteImageView"
                app:layout_constraintEnd_toEndOf="parent"

                app:srcCompat="@drawable/ic_baseline_nearby_error_24" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/horizontal_margin"
                android:text="@string/name_id"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AsteroidImageView" />

            <TextView
                android:id="@+id/setNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:gravity="left"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/asteroidDangerousImageView"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/AsteroidImageView" />

            <TextView
                android:id="@+id/approachDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:text="@string/approach_date"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/setNameTextView" />

            <TextView
                android:id="@+id/setApproachDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:layout_marginTop="12dp"
                android:gravity="left"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/setNameTextView" />

            <TextView
                android:id="@+id/diameterMaxTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:text="@string/diameterMax"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/approachDateTextView" />

            <TextView
                android:id="@+id/diameterMinTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:text="@string/diameterMin"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/diameterMaxTextView" />

            <TextView
                android:id="@+id/speedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:text="@string/speed"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/diameterMinTextView" />

            <TextView
                android:id="@+id/distanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:text="@string/distance"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/speedTextView" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:text="@string/description"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/distanceTextView" />

            <TextView
                android:id="@+id/setDiameterTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/approachDateTextView" />

            <TextView
                android:id="@+id/setDiameterMaxTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/setDiameterTextView" />

            <TextView
                android:id="@+id/setSpeedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/setDiameterMaxTextView" />

            <TextView
                android:id="@+id/setDistanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/setSpeedTextView" />

            <TextView
                android:id="@+id/setDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintEnd_toStartOf="@+id/asteroidFavoriteImageView"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/setDistanceTextView" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/guideline_size" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
    </ScrollView>

</FrameLayout>